--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,53 +1,26 @@
-version: 2
-jobs:
-  build:
-    docker:
-      - image: martinthomson/i-d-template:latest
-    working_directory: ~/draft
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
+version: 2.1
 
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+jobs:
+  say-hello:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    docker:
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
-
-      # Build txt and html versions of drafts
       - run:
-          name: "Build Drafts"
-          command: "make 'CLONE_ARGS=--reference ~/git-reference'"
+          name: "Say hello"
+          command: "echo Hello, World!"
 
-      # Update editor's copy on gh-pages
-      - run:
-          name: "Update GitHub Pages"
-          command: |
-            if [ "${CIRCLE_TAG#draft-}" == "${CIRCLE_TAG}" ]; then
-              make gh-pages
-            fi
-
-      # For tagged builds, upload to the datatracker.
-      - deploy:
-          name: "Upload to Datatracker"
-          command: |
-            if [ "${CIRCLE_TAG#draft-}" != "${CIRCLE_TAG}" ]; then
-              make upload
-            fi
-
-      # Save GitHub issues
-      - run:
-          name: "Save GitHub Issues"
-          command: "make issues || make issues DISABLE_ISSUE_FETCH=true && make gh-issues"
-
-      # Create and store artifacts
-      - run:
-          name: "Create Artifacts"
-          command: "make artifacts CI_ARTIFACTS=/tmp/artifacts"
-
-      - store_artifacts:
-          path: /tmp/artifacts
-
-
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  version: 2
-  build:
+  say-hello-workflow:
     jobs:
-      - build:
-          filters:
-            tags:
-              only: /.*?/
+      - say-hello
